@@ -1,6 +1,7 @@
 package org.concurrent.project;
 
 import java.util.List;
+import java.util.concurrent.ThreadLocalRandom;
 
 /**
  * Clase que implementa la política de selección de transiciones para el monitor
@@ -62,11 +63,10 @@ public class Policy {
   /**
    * Indica si la política de selección debe aplicarse.
    * <p>
-   * En modo {@code PolicyMode.NONE} no se aplica ninguna política propia:
-   * el monitor despierta todas las transiciones elegibles y deja que el
-   * scheduler junto con la exclusión mutua resuelvan el orden natural de
-   * ejecución. En los modos restantes, la política interviene para seleccionar
-   * qué transición despertar ante conflictos.
+   * En modo {@code PolicyMode.NONE} no se aplica ninguna política propia: el
+   * monitor despierta la primera transición elegible por índice (signal-and-exit)
+   * y le cede el mutex. En los modos restantes, la política interviene para
+   * seleccionar qué transición despertar ante conflictos.
    *
    * @return {@code true} si la política está activa (BALANCED o PRIORITIZED).
    */
@@ -311,7 +311,18 @@ public class Policy {
       return selected;
     }
     // si no hay conflicto, simplemente devolvemos el primero
-    return candidates.get(0);
+    return candidates.getFirst();
+  }
+
+  /**
+   * Elige cualquier transicion candidata a ser disparada usando un generador
+   * de número aleatorio.
+   *
+   * @param candidates Lista de candidatos a elegir
+   * @return número de transición a disparar
+   */
+  public int selectAny(List<Integer> candidates) {
+    return candidates.get(ThreadLocalRandom.current().nextInt(candidates.size()));
   }
 
   /**
